// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should add a new raw message to queue 1`] = `
Array [
  Object {
    "messageCount": 1,
    "queue": "0",
  },
  Object {
    "messageCount": 0,
    "queue": "1",
  },
  Object {
    "messageCount": 0,
    "queue": "2",
  },
  Object {
    "messageCount": 0,
    "queue": "3",
  },
  Object {
    "messageCount": 0,
    "queue": "4",
  },
  Object {
    "messageCount": 0,
    "queue": "5",
  },
  Object {
    "messageCount": 0,
    "queue": "6",
  },
  Object {
    "messageCount": 0,
    "queue": "7",
  },
]
`;

exports[`Should consume and format a raw message 1`] = `
Array [
  Object {
    "messageCount": 0,
    "queue": "0",
  },
  Object {
    "messageCount": 2,
    "queue": "1",
  },
  Object {
    "messageCount": 0,
    "queue": "2",
  },
  Object {
    "messageCount": 0,
    "queue": "3",
  },
  Object {
    "messageCount": 0,
    "queue": "4",
  },
  Object {
    "messageCount": 0,
    "queue": "5",
  },
  Object {
    "messageCount": 0,
    "queue": "6",
  },
  Object {
    "messageCount": 0,
    "queue": "7",
  },
]
`;

exports[`Should consume and send a message 1`] = `
Array [
  Object {
    "messageCount": 0,
    "queue": "0",
  },
  Object {
    "messageCount": 0,
    "queue": "1",
  },
  Object {
    "messageCount": 0,
    "queue": "2",
  },
  Object {
    "messageCount": 0,
    "queue": "3",
  },
  Object {
    "messageCount": 0,
    "queue": "4",
  },
  Object {
    "messageCount": 0,
    "queue": "5",
  },
  Object {
    "messageCount": 0,
    "queue": "6",
  },
  Object {
    "messageCount": 0,
    "queue": "7",
  },
]
`;

exports[`Should consume and send a message 2`] = `
Array [
  Object {
    "messageCount": 0,
    "queue": "0",
  },
  Object {
    "messageCount": 0,
    "queue": "1",
  },
  Object {
    "messageCount": 0,
    "queue": "2",
  },
  Object {
    "messageCount": 0,
    "queue": "3",
  },
  Object {
    "messageCount": 0,
    "queue": "4",
  },
  Object {
    "messageCount": 0,
    "queue": "5",
  },
  Object {
    "messageCount": 0,
    "queue": "6",
  },
  Object {
    "messageCount": 0,
    "queue": "7",
  },
]
`;

exports[`Should consume and send a message 3`] = `
Array [
  Object {
    "messageCount": 0,
    "queue": "0",
  },
  Object {
    "messageCount": 0,
    "queue": "1",
  },
  Object {
    "messageCount": 0,
    "queue": "2",
  },
  Object {
    "messageCount": 0,
    "queue": "3",
  },
  Object {
    "messageCount": 0,
    "queue": "4",
  },
  Object {
    "messageCount": 0,
    "queue": "5",
  },
  Object {
    "messageCount": 0,
    "queue": "6",
  },
  Object {
    "messageCount": 0,
    "queue": "7",
  },
]
`;

exports[`Should format a raw message 1`] = `
Array [
  Object {
    "messageCount": 0,
    "queue": "0",
  },
  Object {
    "messageCount": 2,
    "queue": "1",
  },
  Object {
    "messageCount": 0,
    "queue": "2",
  },
  Object {
    "messageCount": 0,
    "queue": "3",
  },
  Object {
    "messageCount": 0,
    "queue": "4",
  },
  Object {
    "messageCount": 0,
    "queue": "5",
  },
  Object {
    "messageCount": 0,
    "queue": "6",
  },
  Object {
    "messageCount": 0,
    "queue": "7",
  },
]
`;

exports[`Should get an error on sending message and manage reject 1`] = `
Array [
  Object {
    "messageCount": 0,
    "queue": "0",
  },
  Object {
    "messageCount": 0,
    "queue": "1",
  },
  Object {
    "messageCount": 1,
    "queue": "2",
  },
  Object {
    "messageCount": 0,
    "queue": "3",
  },
  Object {
    "messageCount": 0,
    "queue": "4",
  },
  Object {
    "messageCount": 0,
    "queue": "5",
  },
  Object {
    "messageCount": 0,
    "queue": "6",
  },
  Object {
    "messageCount": 0,
    "queue": "7",
  },
]
`;

exports[`Should manage a message reject 1`] = `
Array [
  Object {
    "messageCount": 0,
    "queue": "0",
  },
  Object {
    "messageCount": 0,
    "queue": "1",
  },
  Object {
    "messageCount": 1,
    "queue": "2",
  },
  Object {
    "messageCount": 0,
    "queue": "3",
  },
  Object {
    "messageCount": 0,
    "queue": "4",
  },
  Object {
    "messageCount": 0,
    "queue": "5",
  },
  Object {
    "messageCount": 0,
    "queue": "6",
  },
  Object {
    "messageCount": 0,
    "queue": "7",
  },
]
`;

exports[`Should send a message 1`] = `
Array [
  Object {
    "messageCount": 0,
    "queue": "0",
  },
  Object {
    "messageCount": 0,
    "queue": "1",
  },
  Object {
    "messageCount": 0,
    "queue": "2",
  },
  Object {
    "messageCount": 0,
    "queue": "3",
  },
  Object {
    "messageCount": 0,
    "queue": "4",
  },
  Object {
    "messageCount": 0,
    "queue": "5",
  },
  Object {
    "messageCount": 0,
    "queue": "6",
  },
  Object {
    "messageCount": 0,
    "queue": "7",
  },
]
`;
